[gd_scene load_steps=7 format=3 uid="uid://cb0nl2g6d48uv"]

[ext_resource type="Theme" uid="uid://1c1e156uchg8" path="res://data/theme/kiwicraft_theme.tres" id="1_hjp3n"]
[ext_resource type="Script" path="res://source/ui/pc_menu.gd" id="1_qukkl"]
[ext_resource type="Texture2D" uid="uid://bv71p3ne6gx4o" path="res://data/textures/ui/tile_opaque.png" id="3_10cvk"]
[ext_resource type="Texture2D" uid="uid://0s63d1gumhb8" path="res://data/dimensions/map_biomes_au.png" id="3_ko6cj"]
[ext_resource type="Texture2D" uid="uid://dhsqedudna56" path="res://data/textures/ui/endings/ending_1.png" id="5_fbm6p"]
[ext_resource type="Texture2D" uid="uid://bysirt8vypya0" path="res://data/textures/ui/endings/ending_2.png" id="6_itk3b"]

[node name="PCMenu" type="MarginContainer"]
process_mode = 2
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_hjp3n")
script = ExtResource("1_qukkl")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("3_ko6cj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("3_10cvk")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[color=red]NUKE AUSTRALIA TERMINAL"
fit_content = true
autowrap_mode = 0

[node name="Error" type="RichTextLabel" parent="MarginContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
bbcode_enabled = true
text = "[color=salmon] ! Enter"
fit_content = true
autowrap_mode = 0

[node name="Email" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/Email"]
layout_mode = 2
text = "Email: "

[node name="EmailEdit" type="LineEdit" parent="MarginContainer/MarginContainer/VBoxContainer/Email"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter email..."

[node name="Password" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/Password"]
layout_mode = 2
text = "Password: "

[node name="PasswordEdit" type="LineEdit" parent="MarginContainer/MarginContainer/VBoxContainer/Password"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter password..."

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "To nuke australia, enter the following details:
[color=light_blue]Email: nuke@australia.com
Password: for_real
[/color]
Alternatively, to get an Aussie passport, enter the following details:
[color=light_blue]Email: passport@australia.com
Password: aus_au1234"
fit_content = true

[node name="Ending1" type="TextureRect" parent="."]
visible = false
layout_mode = 2
texture = ExtResource("5_fbm6p")
expand_mode = 2
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="Ending1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="Label" parent="Ending1/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
text = "The nuke fails and Aotearoa gets destroyed by the Aussies."
vertical_alignment = 1

[node name="Ending2" type="TextureRect" parent="."]
visible = false
layout_mode = 2
texture = ExtResource("6_itk3b")
expand_mode = 2
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="Ending2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="Label" parent="Ending2/MarginContainer"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
text = "The passport works, but you become enslaved by the Aussies and forced to work building their secret moonbase that they then use to invade Aotearoa again."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="text_submitted" from="MarginContainer/MarginContainer/VBoxContainer/Email/EmailEdit" to="." method="_on_email_edit_text_submitted"]
[connection signal="text_submitted" from="MarginContainer/MarginContainer/VBoxContainer/Password/PasswordEdit" to="." method="_on_password_edit_text_submitted"]
